# testing-farm-mcp

./: .dockerignore  .pre-commit-config.yaml  Containerfile  README.md  justfile  pyproject.toml
.github/workflows/: container-publish.yml  static-analysis.yml
testing_farm_mcp/: __init__.py  client.py  server.py
